--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,21 @@
-<div class="buttons">
-  <button class="duplicate">duplicate</button>
-  <button data-delete-btn>delete</button>
-  <button data-toggle-btn>toggle</button>
-  <button class="modify">modify title</button>
-</div>
-<div class="wrapper">
+<div class="crd">
   <div class="container">
-  <img class="image" src="https://static.boredpanda.com/blog/wp-content/uploads/2020/05/700-1.jpg" />
-  <div class="header">
-    <h3>BORZOI</h3>
-      <h4>woof</h4>
-    <details class="details">
-      <summary>Details</summary>
-      <div>
-        <ul>
-        <li>The magnificent borzoi! </li>
-        <li>Look how  disproportionate its nose is. Marvelous. </li>
-        </ul>
+    <div class="header">
+      <h1>A Picture of a Sunset</h1>
+      <img class="image" src="https://media.cntraveler.com/photos/576834ff90b3537d7c010c05/16:9/w_2560%2Cc_limit/GettyImages-162672165.jpg" alt="A picture"/>
+      <div class="subheader">
+        <h2>A Picture of a Plane in a Sunset</h2>
       </div>
-  </details>
+    </div>
+  </div>
+  <div class="paragraph">
+    <p>This is a picture of a Boeing 787 taking off during sunset.</p>
+  </div>
+  <div class="buttons">
+    <button class="details">Details</button>
   </div>
 </div>
-</div>
+<button class="somethingelse">Something Else</button>
+<button class="addOne">Add</button>
+<button class="remove">Delete One</button>
+<button class="colorChanger">Color Changer</button>
