--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,83 +1,121 @@
-.wrapper {
-    width: 400px;
-    border: 2px solid black;
-    display: inline-flex;
-  }
-  
-  .image {
-    width: 400px;
-  }
-  
-  .header {
-    text-align: center;
-    font-weight: bold;
-    font-size: 2rem; /* scales relatively */
-    
-    
-  }
-  
-  .header h3:hover {
-    font-style: italic; 
-    font-size: 1.1em;
-  }
-  
-  .header h3, 
-  .header h4{
-    transition: .3s ease-in-out all;
-    margin: 16px;
-    font-style: normal;
-    
-  }
-  .buttons button:focus, 
-  .buttons button:hover {
-    background-color: rgba(200, 0, 50, .5);
-  }
-  /*
-  .buttons button:active {
-    background-color: rgba(200, 0, 200, .5); - shades in the part of the project you're not actively working on
-  }
-  */
-   
+.crd{
+  padding: 12px;
+  background-color: skyblue;
+  border-radius: 12px;
+  border: 6px solid black;
+  max-width: 300px;
+  padding: 12px;
+  float: left;
+}
+.image{
+  width: 100%;
+}
+h1{
+  font-size: 30px;
+  text-align: center;
+}
+h2{
+  font-size: 18px;
+  text-align: center;
+}
+.buttons{
+  margin: 0;
+  text-align: center;
+  display: none;
+  clear: both;
+}
+p{
+  text-align: center;
+  display: none;
+}
+@media (min-width: 500px) and (max-width: 800px) {
   .buttons {
     display: block;
-    
+    margin: 0 auto;
+    text-align: center;
   }
-  button {
-    padding: 12px;
-    font-size: 32px;
+}
+.somethingelse {
+  font-size: 18px;
+  display: block;
+  margin: 0;
+}
+.somethingelse:hover{
+  background-color: orange;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.somethingelse:focus{
+  background-color: orange;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.addOne{
+  font-size: 18px;
+  display: block;
+  margin: 0;
+}
+.addOne:hover{
+  background-color: lightseagreen;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.addOne:focus{
+  background-color: lightseagreen;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.remove {
+  font-size: 18px;
+  display: block;
+  margin: 0;
+}
+.remove:hover {
+  background-color: green;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.remove:focus{
+  background-color: green;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.colorChanger{
+  font-size: 18px;
+  display: block;
+  margin: 0;
+}
+.colorChanger:hover{
+  background: linear-gradient(
+    to right,
+    red,
+    yellow,
+    red,
+    blue,
+    cyan,
+    blue,
+    violet
+  );
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.colorChanger:focus{
+  background: linear-gradient(
+    to right,
+    red,
+    yellow,
+    red,
+    blue,
+    cyan,
+    blue,
+    violet
+  );
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 500px) {
+  .crd {
+    transform: scale(0.8);
   }
-  
-  
-  
-  details{
-    margin-left: 24px;
-    padding: 10px;
+  .image {
+    width: 300px;
   }
-  .details summary {
-    font-size: 20px;
-    font-weight: bold;
-    
+  h1 {
+    font-size: 18px;
   }
-  
-  @media only screen and (max-width: 1200px){
-    .wrapper{
-      background-color: pink;
-    }
+  p {
+    font-size: 12px;
   }
-  @media only screen and (max-width: 600px){
-     .wrapper{
-      background-color: purple;
-    }
-    
-  }
-  @media only screen and (max-width: 425px){
-     .wrapper{
-      font-size: 1em;
-    }
-    details {
-      display: none;
-    }
-    .wrapper{
-      font-size: 1.1em; /*this will take priority*/
-    }
-  }
+}
